[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hubcast"
description = "An event driven synchronization application for bridging GitHub and GitLab."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Alec Scott", email = "alec@llnl.gov"},
]
maintainers = [
    {name = "Alec Scott", email = "alec@llnl.gov"},
]
keywords = ["github", "gitlab", "mirroring", "ci"]
dependencies = [
    "aiohttp",
    "cachetools",
    "gidgethub",
    "gidgetlab",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.black]
target-version = ["py38", "py39", "py310", "py311"]
color = true

[tool.isort]
profile = "black"
skip_gitignore = true
color_output = true

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true

# strict
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true

# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[tool.setuptools.dynamic]
version = {attr = "hubcast.__version__"}

[tool.setuptools.package-data]
hubcast = ["py.typed"]

[tool.setuptools.packages.find]
include = ["hubcast*"]
